--- a/index.html
+++ b/index.html
@@ -129,9 +129,7 @@
   </style>
 </head>
 <body>
-  <header>
-    <h1 style="font-size: 2.5rem;">🤖 AVAGPT 🤖</h1>
-    <p>Direkt aus dem göttlichen PKE-Olymp München herabgestiegen, um hilflose Mitarbeitende auf den Pfad der Tugend zu führen – und wird jeden sündigen Zuspätkommer richten und ihn auf Ewigkeiten zu Bereitschaftseinsätzen bei <span style='color: red; font-weight: bold; animation: blink 1s infinite;'>🔥 MTU 🔥</span> verdammen.</p>
+  Direkt aus dem göttlichen PKE-Olymp zu München herabgestiegen, um hilflose Mitarbeitende auf den Pfad der Tugend zu führen – und wird jeden sündigen Zuspätkommer richten und ihn auf Ewigkeiten zu Bereitschaftseinsätzen bei <span style='color: red; font-weight: bold; animation: blink 1s infinite;'>🔥 MTU 🔥</span> verdammen.
   </header>
   <div class="container" style="position: relative;">
     <div style="position: absolute; top: -40px; left: 20px; display: flex; align-items: center;">
@@ -145,24 +143,28 @@
     <button onclick="showAnswer()">Antworten anzeigen</button>
     <div class="answers" id="answer" style="display:none;">
       <div class="label">AVAGPT sagt:</div>
-      <div class="chat-bubble" data-text="1. Steh früher auf, du fauler Hund! ☕"></div>
-      <div class="chat-bubble" data-text="2. Trödel nicht im Bad!"></div>
-      <div class="chat-bubble" data-text="3. Leg das Handy weg bei der morgendlichen Sitzung!"></div>
-      <div class="chat-bubble" data-text="4. Quatsch nicht erst im Büro herum!"></div>
-      <div class="button-group" style="margin-top: 30px; display: none;">
-        <button onclick="blessUser(this)">🙏 Danke, AVAGPT!</button>
-        <button onclick="curseUser(this)" style="margin-left: 10px; background-color: darkred;">😬 Was mach ich, wenn ich schon zu spät bin?</button>
+      <div class="chat-bubble">1. Steh früher auf, du fauler Hund! ☕</div>
+      <div class="chat-bubble">2. Trödel nicht im Bad!</div>
+      <div class="chat-bubble">3. Leg das Handy weg bei der morgendlichen Sitzung!</div>
+      <div class="chat-bubble">4. Quatsch nicht erst im Büro herum!</div>
+      <div style="margin-top: 30px;">
+        <button onclick="blessUser()">🙏 Danke, AVAGPT!</button>
+        <button onclick="curseUser()" style="margin-left: 10px; background-color: darkred;">😬 Was mach ich, wenn ich schon zu spät bin?</button>
       </div>
+      <div id="final-response" style="margin-top: 20px; font-weight: bold; font-size: 1.1rem; color: #00549f;"></div>
     </div>
   </div>
   <footer>
     Powered by SPS | Designed for PKE Campus – AVASYS Basis Schulung 🛠️
   </footer>
+
   <audio id="thunder-audio" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_7dfb5ce2cf.mp3?filename=thunderclap-112071.mp3" preload="auto"></audio>
+
   <script>
     const text = "Wie krieg ich meinen Arsch pünktlich zur Schulung, drück mir vorher noch ’nen Kaffee in die Tasse – und erspar somit meinen Kollegen die Gruppentherapie in Geduld?";
     const typedText = document.getElementById("typed-text");
     let index = 0;
+
     function typeText() {
       if (index < text.length) {
         typedText.innerHTML += text.charAt(index);
@@ -170,77 +172,95 @@
         setTimeout(typeText, 35);
       }
     }
+
     function showAnswer() {
-      const bubbles = document.querySelectorAll('.chat-bubble');
-      const buttonGroup = document.querySelector('.button-group');
-      document.getElementById('answer').style.display = 'block';
-      let delay = 0;
-      bubbles.forEach((bubble, i) => {
-        const text = bubble.dataset.text;
+  const bubbles = document.querySelectorAll('.chat-bubble');
+  const answerContainer = document.getElementById('answer');
+  const buttons = answerContainer.querySelectorAll('button');
+  answerContainer.style.display = 'block';
+  let delay = 0;
+  bubbles.forEach((bubble, i) => {
+    setTimeout(() => {
+      bubble.style.transition = 'opacity 0.5s ease';
+      bubble.style.opacity = '1';
+      bubble.innerHTML = typeBubbleText(bubble.innerHTML);
+      new Audio('https://cdn.pixabay.com/download/audio/2022/03/15/audio_4c9412a768.mp3?filename=message-notification-112611.mp3').play().catch(() => {});
+      if (i === bubbles.length - 1) {
         setTimeout(() => {
-          typeBubbleText(bubble, text);
-          new Audio('https://cdn.pixabay.com/download/audio/2022/03/15/audio_4c9412a768.mp3?filename=message-notification-112611.mp3').play().catch(() => {});
-          if (i === bubbles.length - 1) {
-            setTimeout(() => {
-              buttonGroup.style.display = 'block';
-            }, 1000);
-          }
+          buttons.forEach(btn => btn.style.display = 'inline-block');
+        }, 1000);
+      }
+    }, delay);
+    delay += 1000;
+  });
+  buttons.forEach(btn => btn.style.display = 'none');
+});
         }, delay);
-        delay += text.length * 30 + 300;
+        delay += 800;
       });
     }
-    function typeBubbleText(bubble, text) {
-      bubble.style.opacity = '1';
-      bubble.innerHTML = '';
-      let i = 0;
-      const interval = setInterval(() => {
-        bubble.innerHTML += text.charAt(i);
-        i++;
-        if (i >= text.length) clearInterval(interval);
-      }, 30);
-    }
-    function blessUser(btn) {
-  const group = btn.parentElement;
-  group.querySelectorAll('button').forEach(b => { if (b !== btn) b.remove(); });
-  const responseBubble = document.createElement('div');
-  responseBubble.className = 'chat-bubble';
-  responseBubble.style.opacity = '1';
-  responseBubble.innerHTML = btn.textContent;
-  group.parentElement.appendChild(responseBubble);
+
+    function blessUser() {
+  document.getElementById('final-response').innerHTML = '';
   const bubble = document.createElement('div');
   bubble.className = 'chat-bubble';
-  group.parentElement.appendChild(bubble);
-  typeBubbleText(bubble, "AVAGPT segnet dich, kleiner Schüler. Möge dein Kaffee nie kalt und dein Kalender nie leer sein ✨");
+  bubble.style.opacity = '0';
+  document.getElementById('answer').appendChild(bubble);
+  const responseText = "AVAGPT segnet dich, kleiner Schüler. Möge dein Kaffee nie kalt und dein Kalender nie leer sein ✨";
+  typeFinalResponse(bubble, responseText);
   new Audio('https://cdn.pixabay.com/download/audio/2021/09/16/audio_b6a2dcde1b.mp3?filename=heavenly-angelic-choir-10547.mp3').play().catch(() => {});
+  document.querySelectorAll('.answers button').forEach(btn => btn.style.display = 'none');
 });
+      const avatar = document.querySelector("img[alt='AVAGPT Avatar']");
+      avatar.style.boxShadow = "0 0 30px 10px rgba(255,255,255,0.8)";
+      setTimeout(() => {
+        avatar.style.boxShadow = "0 0 8px rgba(0,0,0,0.2)";
+      }, 1500);
+      document.body.style.background = 'linear-gradient(to bottom, #ffffff, #e0f7fa)';
+      setTimeout(() => {
+        document.body.style.background = '#ffffff';
+      }, 1500);
     }
-    function curseUser(btn) {
-  const group = btn.parentElement;
-  group.querySelectorAll('button').forEach(b => { if (b !== btn) b.remove(); });
-  const responseBubble = document.createElement('div');
-  responseBubble.className = 'chat-bubble';
-  responseBubble.style.opacity = '1';
-  responseBubble.innerHTML = btn.textContent;
-  group.parentElement.appendChild(responseBubble);
+
+    function curseUser() {
   const container = document.querySelector('.container');
   container.style.animation = 'thunderFlash 0.4s ease';
   setTimeout(() => { container.style.animation = ''; }, 400);
+  document.getElementById('final-response').innerHTML = '';
   const bubble = document.createElement('div');
   bubble.className = 'chat-bubble';
-  group.parentElement.appendChild(bubble);
-  typeBubbleText(bubble, "Dann hast du verkackt! AVAGPT verflucht dich auf ewig zu Montagsdiensten in der MTU. 😈");
+  bubble.style.opacity = '0';
+  document.getElementById('answer').appendChild(bubble);
+  const responseText = "Dann hast du verkackt! AVAGPT verflucht dich auf ewig zu Montagsdiensten in der MTU. 😈";
+  typeFinalResponse(bubble, responseText);
   new Audio('https://cdn.pixabay.com/download/audio/2022/03/11/audio_5f2f2cefb2.mp3?filename=dark-horror-transition-110879.mp3').play().catch(() => {});
+  document.querySelectorAll('.answers button').forEach(btn => btn.style.display = 'none');
 }, 400);
-      const bubble = document.createElement('div');
-      bubble.className = 'chat-bubble';
-      document.getElementById('answer').appendChild(bubble);
-      typeBubbleText(bubble, "Dann hast du verkackt! AVAGPT verflucht dich auf ewig zu Montagsdiensten in der MTU. 😈");
+      document.getElementById("final-response").innerHTML = "Dann hast du verkackt! AVAGPT verflucht dich auf ewig zu Montagsdiensten in der MTU. 😈";
       new Audio('https://cdn.pixabay.com/download/audio/2022/03/11/audio_5f2f2cefb2.mp3?filename=dark-horror-transition-110879.mp3').play().catch(() => {});
     }
+
     window.onload = function () {
       document.getElementById("thunder-audio").play().catch(() => {});
       typeText();
     };
-  </script>
+  function typeBubbleText(text) {
+  let result = '';
+  for (let i = 0; i < text.length; i++) {
+    result += text[i];
+  }
+  return result;
+}
+
+function typeFinalResponse(bubble, text) {
+  let i = 0;
+  bubble.style.opacity = '1';
+  const interval = setInterval(() => {
+    bubble.innerHTML += text.charAt(i);
+    i++;
+    if (i >= text.length) clearInterval(interval);
+  }, 30);
+}
+</script>
 </body>
 </html>
