--- a/index.html
+++ b/index.html
@@ -129,7 +129,9 @@
   </style>
 </head>
 <body>
-  Direkt aus dem göttlichen PKE-Olymp zu München herabgestiegen, um hilflose Mitarbeitende auf den Pfad der Tugend zu führen – und wird jeden sündigen Zuspätkommer richten und ihn auf Ewigkeiten zu Bereitschaftseinsätzen bei <span style='color: red; font-weight: bold; animation: blink 1s infinite;'>🔥 MTU 🔥</span> verdammen.
+  <header>
+    <h1 style="font-size: 2.5rem;">🤖 AVAGPT 🤖</h1>
+    <p>Gesandt, um hilflose Mitarbeitende auf den Pfad der Tugend zu führen – und wird jeden sündigen Zuspätkommer richten und ihn auf Ewigkeiten zu Bereitschaftseinsätzen bei <span style='color: red; font-weight: bold; animation: blink 1s infinite;'>🔥 MTU 🔥</span> verdammen.</p>
   </header>
   <div class="container" style="position: relative;">
     <div style="position: absolute; top: -40px; left: 20px; display: flex; align-items: center;">
@@ -174,43 +176,22 @@
     }
 
     function showAnswer() {
-  const bubbles = document.querySelectorAll('.chat-bubble');
-  const answerContainer = document.getElementById('answer');
-  const buttons = answerContainer.querySelectorAll('button');
-  answerContainer.style.display = 'block';
-  let delay = 0;
-  bubbles.forEach((bubble, i) => {
-    setTimeout(() => {
-      bubble.style.transition = 'opacity 0.5s ease';
-      bubble.style.opacity = '1';
-      bubble.innerHTML = typeBubbleText(bubble.innerHTML);
-      new Audio('https://cdn.pixabay.com/download/audio/2022/03/15/audio_4c9412a768.mp3?filename=message-notification-112611.mp3').play().catch(() => {});
-      if (i === bubbles.length - 1) {
+      const bubbles = document.querySelectorAll('.chat-bubble');
+      document.getElementById('answer').style.display = 'block';
+      let delay = 0;
+      bubbles.forEach((bubble, i) => {
         setTimeout(() => {
-          buttons.forEach(btn => btn.style.display = 'inline-block');
-        }, 1000);
-      }
-    }, delay);
-    delay += 1000;
-  });
-  buttons.forEach(btn => btn.style.display = 'none');
-});
+          bubble.style.transition = 'opacity 0.5s ease';
+          bubble.style.opacity = '1';
+          new Audio('https://cdn.pixabay.com/download/audio/2022/03/15/audio_4c9412a768.mp3?filename=message-notification-112611.mp3').play().catch(() => {});
         }, delay);
         delay += 800;
       });
     }
 
     function blessUser() {
-  document.getElementById('final-response').innerHTML = '';
-  const bubble = document.createElement('div');
-  bubble.className = 'chat-bubble';
-  bubble.style.opacity = '0';
-  document.getElementById('answer').appendChild(bubble);
-  const responseText = "AVAGPT segnet dich, kleiner Schüler. Möge dein Kaffee nie kalt und dein Kalender nie leer sein ✨";
-  typeFinalResponse(bubble, responseText);
-  new Audio('https://cdn.pixabay.com/download/audio/2021/09/16/audio_b6a2dcde1b.mp3?filename=heavenly-angelic-choir-10547.mp3').play().catch(() => {});
-  document.querySelectorAll('.answers button').forEach(btn => btn.style.display = 'none');
-});
+      document.getElementById("final-response").innerHTML = "AVAGPT segnet dich, kleiner Schüler. Möge dein Kaffee nie kalt und dein Kalender nie leer sein ✨";
+      new Audio('https://cdn.pixabay.com/download/audio/2021/09/16/audio_b6a2dcde1b.mp3?filename=heavenly-angelic-choir-10547.mp3').play().catch(() => {});
       const avatar = document.querySelector("img[alt='AVAGPT Avatar']");
       avatar.style.boxShadow = "0 0 30px 10px rgba(255,255,255,0.8)";
       setTimeout(() => {
@@ -223,19 +204,9 @@
     }
 
     function curseUser() {
-  const container = document.querySelector('.container');
-  container.style.animation = 'thunderFlash 0.4s ease';
-  setTimeout(() => { container.style.animation = ''; }, 400);
-  document.getElementById('final-response').innerHTML = '';
-  const bubble = document.createElement('div');
-  bubble.className = 'chat-bubble';
-  bubble.style.opacity = '0';
-  document.getElementById('answer').appendChild(bubble);
-  const responseText = "Dann hast du verkackt! AVAGPT verflucht dich auf ewig zu Montagsdiensten in der MTU. 😈";
-  typeFinalResponse(bubble, responseText);
-  new Audio('https://cdn.pixabay.com/download/audio/2022/03/11/audio_5f2f2cefb2.mp3?filename=dark-horror-transition-110879.mp3').play().catch(() => {});
-  document.querySelectorAll('.answers button').forEach(btn => btn.style.display = 'none');
-}, 400);
+      const container = document.querySelector('.container');
+      container.style.animation = 'thunderFlash 0.4s ease';
+      setTimeout(() => { container.style.animation = ''; }, 400);
       document.getElementById("final-response").innerHTML = "Dann hast du verkackt! AVAGPT verflucht dich auf ewig zu Montagsdiensten in der MTU. 😈";
       new Audio('https://cdn.pixabay.com/download/audio/2022/03/11/audio_5f2f2cefb2.mp3?filename=dark-horror-transition-110879.mp3').play().catch(() => {});
     }
@@ -244,23 +215,6 @@
       document.getElementById("thunder-audio").play().catch(() => {});
       typeText();
     };
-  function typeBubbleText(text) {
-  let result = '';
-  for (let i = 0; i < text.length; i++) {
-    result += text[i];
-  }
-  return result;
-}
-
-function typeFinalResponse(bubble, text) {
-  let i = 0;
-  bubble.style.opacity = '1';
-  const interval = setInterval(() => {
-    bubble.innerHTML += text.charAt(i);
-    i++;
-    if (i >= text.length) clearInterval(interval);
-  }, 30);
-}
-</script>
+  </script>
 </body>
 </html>
