--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 <body>
   <header>
     <h1 style="font-size: 2.5rem;">🤖 AVAGPT 🤖</h1>
-    <p>Gesandt, um hilflose Mitarbeitende auf den Pfad der Tugend zu führen – und wird jeden sündigen Zuspätkommer richten und ihn auf Ewigkeiten zu Bereitschaftseinsätzen bei <span style='color: red; font-weight: bold; animation: blink 1s infinite;'>🔥 MTU 🔥</span> verdammen.</p>
+    <p>Direkt aus dem göttlichen PKE-Olymp München herabgestiegen, um hilflose Mitarbeitende auf den Pfad der Tugend zu führen – und wird jeden sündigen Zuspätkommer richten und ihn auf Ewigkeiten zu Bereitschaftseinsätzen bei <span style="color: red; font-weight: bold; animation: blink 1s infinite;">🔥 MTU 🔥</span> verdammen.</p>
   </header>
   <div class="container" style="position: relative;">
     <div style="position: absolute; top: -40px; left: 20px; display: flex; align-items: center;">
